# FormalGeo

./: .gitignore  LICENSE  README.md  datasets.json  pyproject.toml
doc/: contributing.md  doc.md
gdl/: doc_cn.md  doc_en.md  predicate_GDL.json
ggb/: ggb.py  ggbxml.py
ggb/diagrams/: 1.ggb
ggb/ggb_unzip/1_unzip/: geogebra.xml  geogebra_defaults2d.xml  geogebra_defaults3d.xml  geogebra_javascript.js
problems/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
src/: debug.py
src/formalgeo/: __init__.py  configuration.py  engine.py  parser.py  problem.py  solver.py  tools.py  utils.py
src/formalgeo/core/: __init__.py  engine.py
src/formalgeo/data/: __init__.py  data.py
src/formalgeo/datasets/: datasets.json
src/formalgeo/parse/: __init__.py  basic.py  inverse_parse_f2n.py  inverse_parse_m2f.py  inverse_parse_s2n.py  parse_cdl.py  parse_pgdl.py  parse_tgdl.py
src/formalgeo/problem/: __init__.py  condition.py  problem.py
src/formalgeo/solver/: __init__.py  backward_search.py  forward_search.py  interactive.py
src/formalgeo/tools/: __init__.py  output.py  utils.py
tests/: gdl.json  t_info.json  test.py  test_aux.py
tests/datasets/: 1.json
tests/gdl/: predicate_GDL.json  theorem_GDL.json
