[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "FormalGeo"
version = "0.0.4"
authors = [
    { name = "Xiaokai Zhang", email = "xiaokaizhang1999@163.com" },
]
description = "Formal representation and solving for Euclidean plane geometry problems."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sympy>=1.10",
    "func-timeout>=4.3",
    "requests>=2.31",
    "tqdm>=4.66.1",
    "graphviz>=0.20.1"
]
[project.urls]
"Homepage" = "https://github.com/FormalGeo/FormalGeo"
"Bug Tracker" = "https://github.com/FormalGeo/FormalGeo/issues"