[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "FormalGeo"
version = "2.2.2"
authors = [
    { name = "Xiaokai Zhang", email = "xiaokaizhang@shu.edu.cn" },
]
description = "Formal representation and solving for Euclidean plane geometry problems."
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.12.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sympy>=1.14.0",
    "func-timeout>=4.3.5",
    "graphviz>=0.21",
    "matplotlib>=3.10.8"
]
[project.urls]
"Homepage" = "https://github.com/FormalGeo/FormalGeo"
"Bug Tracker" = "https://github.com/FormalGeo/FormalGeo/issues"